--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Su Yon Sohn",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
