--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
-    "jwks-rsa": "^1.4.0"
+    "jwks-rsa": "^1.4.0",
+    "mongoose": "^5.5.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
