--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "express-validator": "^5.3.1",
     "jwks-rsa": "^1.4.0",
     "mongoose": "^5.5.2"
   },
