--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Su Yon Sohn",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
+    "gravatar": "^1.8.0",
     "jwks-rsa": "^1.4.0",
     "mongoose": "^5.5.2"
   },
