--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Track expenses",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Su Yon Sohn",
@@ -15,6 +16,7 @@
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
     "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.4.0",
     "mongoose": "^5.5.2"
   },
