--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Track expenses",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Su Yon Sohn",
@@ -21,6 +23,7 @@
     "mongoose": "^5.5.2"
   },
   "devDependencies": {
+    "concurrently": "^4.1.0",
     "nodemon": "^1.18.11"
   }
 }
